tests/baselines/reference/ES5For-of30.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of30.ts(3,6): error TS2461: Type 'string | number' is not an array type.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of30.ts (1 errors) ====
    var a: string, b: number;
    var tuple: [number, string] = [2, "3"];
    for ([a = 1, b = ""] of tuple) {
         ~~~~~~~~~~~~~~~
!!! error TS2461: Type 'string | number' is not an array type.
        a;
        b;
    }